--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                         challenges and welcome individuality.</p>
 
                     <div class="about_social">
-                        <a href="#" class="about_social-icon"><i class='bx bxl-linkedin'></i></a>
-                        <a href="#" class="about_social-icon"><i class='bx bxl-facebook-circle'></i></a>
-                        <a href="#" class="about_social-icon"><i class='bx bxl-instagram'></i></a>
+                        <a href="https://www.linkedin.com/in/c-manjemanje-265a7870/" class="about_social-icon"><i class='bx bxl-linkedin'></i></a>
+                        <a href="https://www.facebook.com/cleopasmanjemanje263" class="about_social-icon"><i class='bx bxl-facebook-circle'></i></a>
+                        <a href="https://www.instagram.com/cleopasmanjemanje263/" class="about_social-icon"><i class='bx bxl-instagram'></i></a>
                         <a href="" class="about_social-icon"><i class='bx bxl-twitter'></i></a>
                     </div>
                 </div>
