--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="l-header">
         <nav class="nav bd-grid">
             <div>
-                <a href="a" class="nav_logo">Cleopas Manjemanje</a>
+                <a href="a" class="nav_logo">CM</a>
             </div>
             <div class="nav_menu" id="nav-menu">
                 <ul class="nav_list">
@@ -48,25 +48,27 @@
         </section>
 
         <section class="about section" id="about">
-            <h2 class="section-tittle">About</h2>
+            <h2 class="section-title">About</h2>
 
-            <div class="about_containter bd-grid">
+            <div class="about_container bd-grid">
                 <div class="about_img">
                     <img src="assets/img/img1.jpg" alt="">
                 </div>
                 <div>
                     <h2 class="about_subtitle">I am Cleopas Manjemanje</h2>
-                    <span class="about_profeseeion">Digital Marketer</span>
+
+                    <span class="about_profession">Digital Marketer</span>
+                
                     <p class="about_text"> Diversity is what inspires my work. I love all things color & art. My
-                        inspiration comes from a melting pot of varied sources: from famous artists such as Andy Warhol
-                        to mixed cultures, video games, and more. I can adapt to any role and environment. I embrace
-                        challenges and welcome individuality.</p>
+                        inspiration comes from a melting pot of varied sources: from music to mixed cultures, video games and more. I can adapt to any role and environment. I embrace
+                        challenges and welcome individuality. I am also pationate about computer repairs.</p>
 
                     <div class="about_social">
                         <a href="https://www.linkedin.com/in/c-manjemanje-265a7870/" class="about_social-icon"><i class='bx bxl-linkedin'></i></a>
                         <a href="https://www.facebook.com/cleopasmanjemanje263" class="about_social-icon"><i class='bx bxl-facebook-circle'></i></a>
                         <a href="https://www.instagram.com/cleopasmanjemanje263/" class="about_social-icon"><i class='bx bxl-instagram'></i></a>
-                        <a href="" class="about_social-icon"><i class='bx bxl-twitter'></i></a>
+                        <a href="https://twitter.com/cleomanjemanje" class="about_social-icon"><i class='bx bxl-twitter'></i></a>
+                        <a href="https://github.com/dstar263/Cleopas-Portifolio.git" class="about_social-icon"><i class='bx bxl-github'></i></a>
                     </div>
                 </div>
 
@@ -118,43 +120,41 @@
 
             <div class="portfolio_container bd-grid">
                 <div class="portfolio_image">
-                    <img src="assets/img/img1.jpg" alt="">
+                    <img src="assets/img/seo.jpg" alt="">
                     <div class="portfolio_link">
-                        <a href="" class="portfolio_link-name">View details</a>
+                        <a href="https://www.facebook.com/cleopasmanjemanje263" class="portfolio_link-name">View details</a>
                     </div>
                 </div>
 
                 <div class="portfolio_image">
-                    <img src="assets/img/img1.jpg" alt="">
+                    <img src="assets/img/merakist-CNbRsQj8mHQ-unsplash.jpg" alt="">
                     <div class="portfolio_link">
                         <a href="" class="portfolio_link-name">View details</a>
                     </div>
                 </div>
                 <div class="portfolio_image">
-                    <img src="assets/img/img1.jpg" alt="">
+                    <img src="assets/img/EMAIL.jpg" alt="">
                     <div class="portfolio_link">
                         <a href="" class="portfolio_link-name">View details</a>
                     </div>
                 </div>
                 <div class="portfolio_image">
-                    <img src="assets/img/img1.jpg" alt="">
+                    <img src="assets/img/GOOGLE ANAYTICS.jpg" alt="">
                     <div class="portfolio_link">
                         <a href="" class="portfolio_link-name">View details</a>
                     </div>
                 </div>
                 <div class="portfolio_image">
-                    <img src="assets/img/img1.jpg" alt="">
+                    <img src="assets/img/DESIGN.png" alt="">
                     <div class="portfolio_link">
                         <a href="" class="portfolio_link-name">View details</a>
                     </div>
                 </div>
                 <div class="portfolio_image">
-                    <img src="assets/img/img1.jpg" alt="">
+                    <img src="assets/img/BRANDING.png" alt="">
                     <div class="portfolio_link">
                         <a href="" class="portfolio_link-name">View details</a>
                     </div>
-                </div>
-
             </div>
         </section>
 
@@ -205,10 +205,12 @@
 
             <div class="footer_data">
                 <h2 class="footer_title">FOLLOW</h2>
-                <a href="#" class="footer_social-icon"><i class='bx bxl-linkedin'></i></a>
-                <a href="#" class="footer_social-icon"><i class='bx bxl-facebook-circle'></i></a>
-                <a href="#" class="footer_social-icon"><i class='bx bxl-instagram'></i></a>
-                <a href="" class="footer_social-icon"><i class='bx bxl-twitter'></i></a>
+                <a href="https://www.linkedin.com/in/c-manjemanje-265a7870/" class="about_social-icon" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://www.facebook.com/cleopasmanjemanje263" class="about_social-icon" target="_blank"><i class='bx bxl-facebook-circle'></i></a>
+                <a href="https://www.instagram.com/cleopasmanjemanje263/" class="about_social-icon" target="_blank"><i class='bx bxl-instagram'></i></a>
+                <a href="https://twitter.com/cleomanjemanje" class="about_social-icon" target="_blank"><i class='bx bxl-twitter'></i></a>
+                <a href="https://github.com/dstar263/Cleopas-Portifolio.git" class="about_social-icon" target="_blank"><i class='bx bxl-github'></i></a>
+                
             </div>
 
 
