--- a/index.html
+++ b/index.html
@@ -223,6 +223,15 @@
 
     <!---MAIN JS-->
     <script src="assets/js/main.js"></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-302MPPQ81B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-302MPPQ81B');
+</script>
 </body>
 
 </html>
