--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
                 <div class="portfolio_image">
                     <img src="assets/img/seo.jpg" alt="">
                     <div class="portfolio_link">
-                        <a href="https://www.facebook.com/cleopasmanjemanje263" class="portfolio_link-name">View details</a>
+                        <a href="" class="portfolio_link-name">View details</a>
                     </div>
                 </div>
 
                 <div class="portfolio_image">
                     <img src="assets/img/merakist-CNbRsQj8mHQ-unsplash.jpg" alt="">
                     <div class="portfolio_link">
-                        <a href="" class="portfolio_link-name">View details</a>
+                        <a href="https://www.facebook.com/cleopasmanjemanje263" class="portfolio_link-name">View details</a>
                     </div>
                 </div>
                 <div class="portfolio_image">
@@ -150,7 +150,7 @@
                 <div class="portfolio_image">
                     <img src="assets/img/GOOGLE ANAYTICS.jpg" alt="">
                     <div class="portfolio_link">
-                        <a href="" class="portfolio_link-name">View details</a>
+                        <a href="https://analytics.google.com/analytics/web/#/p359330813/reports/reportinghub" class="portfolio_link-name">View details</a>
                     </div>
                 </div>
                 <div class="portfolio_image">
@@ -162,7 +162,7 @@
                 <div class="portfolio_image">
                     <img src="assets/img/BRANDING.png" alt="">
                     <div class="portfolio_link">
-                        <a href="" class="portfolio_link-name">View details</a>
+                        <a href="https://www.canva.com/design/DAFcbrzt9kI/DEwVxOgEOuTW2m1hrQU_Ow/edit?utm_source=onboarding#" class="portfolio_link-name">View details</a>
                     </div>
             </div>
         </section>
