--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <div class="portfolio_image">
                     <img src="assets/img/seo.jpg" alt="">
                     <div class="portfolio_link">
-                        <a href="" class="portfolio_link-name">View details</a>
+                        <a href="https://search.google.com/search-console?resource_id=https%3A%2F%2Fdstar263.github.io%2FCleopas-Portifolio%2F" class="portfolio_link-name">View details</a>
                     </div>
                 </div>
 
