--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div class="portfolio_image">
                     <img src="assets/img/DESIGN.png" alt="">
                     <div class="portfolio_link">
-                        <a href="" class="portfolio_link-name">View details</a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeMtTa1lCHfwaLlyYWuu5ZwLVZL9BTT_jy9xxPjQ3XHchs3qw/viewform" class="portfolio_link-name">View details</a>
                     </div>
                 </div>
                 <div class="portfolio_image">
