--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 
                     <p class="about_text"> Diversity is what inspires my work. I love all things color & art. My
                         inspiration comes from a melting pot of varied sources: from music to mixed cultures, video games and more. I can adapt to any role and environment. I embrace
-                        challenges and welcome individuality. I am also pationate about computer repairs.</p>
+                        challenges and welcome individuality. I am also passionate about computer repairs.</p>
 
                     <div class="about_social">
                         <a href="https://www.linkedin.com/in/c-manjemanje-265a7870/" class="about_social-icon"><i class='bx bxl-linkedin'></i></a>
