--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
     <!--BOX ICONS-->
-    <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' <title>My Portifolio</title>
+    <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css'>
 </head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-302MPPQ81B"></script>
@@ -31,6 +31,7 @@
             <div>
                 <a href="a" class="nav_logo">CM</a>
             </div>
+            
             <div class="nav_menu" id="nav-menu">
                 <ul class="nav_list">
                     <li class="nav_item"><a href="#home" class="nav_link">Home</a></li>
@@ -45,6 +46,7 @@
             </div>
         </nav>
     </header>
+    <h1 id="myH1">My Portifolio</h1>
     <main class="1-main">
         <section class="home" id="home">
             <div class="home_container bd-grid">
@@ -53,7 +55,7 @@
                 <div class="home_scroll">
                     <a href="#about" class="home_scroll-link"><i class='bx bx-up-arrow-alt'></i></a>
                 </div>
-                <img src="assets/img/img1.jpg" alt="" class="home_img">
+                <img src="assets/img/img1.png" alt="" class="home_img">
             </div>
         </section>
 
@@ -62,7 +64,7 @@
 
             <div class="about_container bd-grid">
                 <div class="about_img">
-                    <img src="assets/img/img1.jpg" alt="">
+                    <img src="assets/img/img1.png" alt="">
                 </div>
                 <div>
                     <h2 class="about_subtitle">I am Cleopas Manjemanje</h2>
@@ -72,6 +74,8 @@
                     <p class="about_text"> Diversity is what inspires my work. I love all things color & art. My
                         inspiration comes from a melting pot of varied sources: from music to mixed cultures, video games and more. I can adapt to any role and environment. I embrace
                         challenges and welcome individuality. I am also passionate about computer repairs.</p>
+
+                        <button class="button1"><a href="./assets/download/" download="manjemanje">Download CV</a></button>
 
                     <div class="about_social">
                         <a href="https://www.linkedin.com/in/c-manjemanje-265a7870/" class="about_social-icon"><i class='bx bxl-linkedin'></i></a>
